refactor JLine